	someObject ---|> someType now consistently means: someObject's Type is someType or someObject's Type inherits from someType.
	Examples:
      [] ---|> Array			== true
      [] ---|> Collection		== true
	  Array ---|> Type			== true
	  Array ---|> Collection	== false		!!!! changed !!!
	  Array.hasBase( Collection ) == true		*** new ***
	  Collection.isBaseOf( Array ) == true		*** new ***
 
Internals:
 - string handling updated
 - minor fixes and cleanups
 
C++-Api:
  - old ES_FUNCTION macro removed; ES_FUNCTION2 renamed to ES_FUNCTION
  - ObjRef.toType<targetType> renamed to ObjRef.castTo<targetType> (toType temporarily remains for backward compatibility)
 
Libs:
 IOLib: 
  - IO.filePutContents -> IO.saveTextFile
  - IO.fileGetContents -> IO.loadTextFile
 
--------------------------------------------
EScript 0.6.6 Eduard (Stable version)
Release: 2013-02-10

General:
 - Named after Eduard the Great Rabbit

Internals:
 - (bugfix) Missing conversion from "const char *" to RtValue added.
 

C++-Api:
 - Number of necessary headers reduced: Normally, a binding's header needs only to 
    include the header of the (ext)reference object (<EScript/Objects/ReferenceObject.h>).
	Everything needed for a basic implementation in the binding's .cpp file is included in
	<EScript/Basics.h>. If additional standard types are needed (Number,Bool,String,Array, or Map)
	the additional header <EScript/StdObjects.h> can be included.
 - Helper:
    - declareObjectFunction(...) added.
 - New function macros introduced: ES_CONSTRUCTOR, ES_CTOR, ES_FUNCTION2(to be renamed), ES_FUN, 
	ES_MFUNCTION, and ES_MFUN. The new macros allow direct conversion to the desired C++-type 
	(instead of the EScript wrapper type). Explicit conversion of a function's result into an 
	EScript object is also no longer necessary in most cases. 
	The available parameters are:
	- rt (the runtime, formerly named 'runtime')
	- parameter (array of parameters; same as before)